--- a/wp-content/plugins/el-canciller/package.json
+++ b/wp-content/plugins/el-canciller/package.json
@@ -20,6 +20,7 @@
         "@babel/core": "^7.4.5",
         "@babel/preset-env": "^7.4.5",
         "babel-loader": "^8.0.6",
+        "babel-polyfill": "^6.26.0",
         "lodash": "^4.17.11",
         "webpack": "^4.34.0",
         "webpack-cli": "^3.3.4"
