--- a/wp-content/plugins/el-canciller/package.json
+++ b/wp-content/plugins/el-canciller/package.json
@@ -26,6 +26,7 @@
         "webpack-cli": "^3.3.4"
     },
     "dependencies": {
-        "moment": "^2.24.0"
+        "moment": "^2.24.0",
+        "moment-locales-webpack-plugin": "^1.0.7"
     }
 }
